cambios copis ladding

--- a/Eden/index.html
+++ b/Eden/index.html
@@ -4,11 +4,11 @@
 	<!--  App Title  -->
 	<title>Edén</title>
 	<!--  App Description  -->
-	<meta name="description" content="Capture is a free bootstrap v3.3.2 app landing page perfect to present you IOS, android or windows application in an elegant way."/>
+	<meta name="description" content="Edén, app movil para el monitoreo de su maceta inteligente."/>
 	<meta charset="utf-8">
-	<meta name="author" content="pixelhint.com">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+	<link rel="shortcut icon" type="image/png" href="img/logo.png"/>
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
 	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css"/>
@@ -31,9 +31,10 @@
 	<!--  Header Section  -->
 	<header>
 		<div class="container">
+		<!--
 			<div class="logo pull-left animated wow fadeInLeft">
-				<img src="img/logo.png" alt="" title="">
-			</div>
+				<img src="img/logo.png" alt="Edén logo" title="Edén logo">
+			</div> -->
 
 			
 			<nav class="pull-left">
@@ -66,15 +67,15 @@
 	<section class="hero" id="hero">
 		<div class="container">
 			<div class="caption">
-				<h1 class="text-uppercase  animated wow fadeInLeft">Take Photos Like A Pro.</h1>
-				<p class="text-lowercase  animated wow fadeInLeft">With only your iphone and capture app you can take stunning image like a professional Photographer.</p>
+				<h1 class="text-uppercase  animated wow fadeInLeft">Lleva la naturaleza hasta ti.</h1>
+				<p class="text-lowercase  animated wow fadeInLeft">Toma el control de los vegetales con los que te estas alimentando o aprende sobre como cultivar en casa, solo necesitas tu celular, nuestra maceta Edén y su app.</p>
 
-				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="#submit_form" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="iphone_icon"></i>
 					<span>Iphone App</span>
 				</a>
 
-				<a href="http://pixelhint.com/capture-free-responsive-bootstrap-app-landing-page-theme" class="app_store_btn text-uppercase animated wow fadeInLeft">
+				<a href="#submit_form" class="app_store_btn text-uppercase animated wow fadeInLeft">
 					<i class="android_icon"></i>
 					<span>Android App</span>
 				</a>
@@ -92,17 +93,14 @@
 	<section class="featured_on">
 		<div class="container">
 			<ul class="list-unstyled text-center clearfix">
-				<li class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown">
+				<li class="col-xs-6 col-sm-6 col-md-4 animated wow fadeInDown">
+					<img src="img/logo-UPB.png" height="45" alt="" title="">
+				</li>
+				<li class="col-xs-6 col-sm-6 col-md-4 animated wow fadeInDown" data-wow-delay=".2s">
+					<img src="img/tuapp-2017.png" height="45" alt="" title="">
+				</li>
+				<li class="col-xs-6 col-sm-6 col-md-4 animated wow fadeInDown" data-wow-delay=".3s">
 					<img src="img/google_logo.png" alt="" title="">
-				</li>
-				<li class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown" data-wow-delay=".2s">
-					<img src="img/facebook_logo.png" alt="" title="">
-				</li>
-				<li class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown" data-wow-delay=".3s">
-					<img src="img/yahoo_logo.png" alt="" title="">
-				</li>
-				<li class="col-xs-6 col-sm-6 col-md-3 animated wow fadeInDown" data-wow-delay=".4s">
-					<img src="img/paypal_logo.png" alt="" title="">
 				</li>
 			</ul>
 		</div>
@@ -126,16 +124,16 @@
 				<div class="col-md-6 animated wow fadeInRight">
 					<div class="features_list">
 						<h1 class="text-uppercase">Capture unforgettable moments.</h1>
-						<p>Seuismod ligula ipsum vulputate tellus quisque dictum tortor at purus faucibus tincidunt, pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
+						<p>Con el sistema Edén completo tendrás al alcance la información que necesitas para cuidar tus plantas, consejos, libros y una forma entretenida de conocer acerca del proceso de jardineria desde la comodidad de tu casa.</p>
 						<ul class="list-unstyled">
 							<li class="camera_icon">
-								<span>Euismod ligula ipsum vulputate tellus.</span>
+								<span>Cuida el avance de tus planta con la galeria.</span>
 							</li>
 							<li class="video_icon">
-								<span>Morbi non efficitur nibh sit amet est eros.</span>
+								<span>Controla el agua y el sistema de riego de la maceta Edén.</span>
 							</li>
 							<li class="eye_icon">
-								<span>Fusce faucibus ante liberonec luctus egestas.</span>
+								<span>Monitorea la cantidad de luz que recibe tu planta.</span>
 							</li>
 							<li class="pic_icon">
 								<span>Quisque pretium malesuada ornare.</span>
@@ -145,11 +143,11 @@
 							</li>
 						</ul>
 
-						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="http://www.youtube.com/embed/Bm3NV3gGB2w?autoplay=1&showinfo=0">
+						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="https://www.youtube.com/embed/27JWNka8q10">
 							<i class="play_icon"></i>
 							<span>About Video</span>
 						</a>
-						<a href="#hero" class="app_link">Get the app</a>
+						<a href="#submit_form" class="app_link">Obtener la aplicación</a>
 					</div>					
 				</div>
 			</div>
