--- a/App-Fotos-Parcial/index.html
+++ b/App-Fotos-Parcial/index.html
@@ -18,14 +18,14 @@
     <nav>
       <div class="nav-wrapper">
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="#">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Artis</a></li>
+          <li><a href="#">Artwork</a></li>
+          <li><a href="#">About</a></li>
         </ul>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Sign Up</a></li>
         </ul>
       </div>
     </nav>
