--- a/App-Fotos-Parcial/index.html
+++ b/App-Fotos-Parcial/index.html
@@ -8,28 +8,100 @@
 
   <title></title>
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/materialize.css">
   <link rel="stylesheet" href="css/materialize.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.png">
+  <style media="screen">
+
+  </style>
+
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
     <nav>
       <div class="nav-wrapper">
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Artis</a></li>
           <li><a href="#">Artwork</a></li>
           <li><a href="#">About</a></li>
-        </ul>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Login</a></li>
         <li><a href="#">Sign Up</a></li>
         </ul>
       </div>
     </nav>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <div class="row">
+        <div class="col s12" style="padding: 0;">
+          <div class="carousel carousel-slider center" data-indicators="true">
+            <div class="carousel-fixed-item center">
+              <a class="btn waves-effect white grey-text darken-text-2">Acceder</a>
+            </div>
+            <div class="carousel-item red white-text" style="background: url(img/background1.jpg) no-repeat center fixed; background-size: cover;" href="#one!">
+              <h2>First Panel</h2>
+              <p class="white-text">This is your first panel</p>
+            </div>
+            <div class="carousel-item amber white-text" href="#two!">
+              <h2>Second Panel</h2>
+              <p class="white-text">This is your second panel</p>
+            </div>
+            <div class="carousel-item green white-text" href="#three!">
+              <h2>Third Panel</h2>
+              <p class="white-text">This is your third panel</p>
+            </div>
+            <div class="carousel-item blue white-text" href="#four!">
+              <h2>Fourth Panel</h2>
+              <p class="white-text">This is your fourth panel</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="section">
+
+          <!--   Icon Section   -->
+          <div class="row">
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center brown-text"><i class="medium material-icons">screen_share</i></h2>
+                <h5 class="center">Speeds up development</h5>
+
+                <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+              </div>
+            </div>
+
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center brown-text"><i class="medium material-icons">group</i></h2>
+                <h5 class="center">User Experience Focused</h5>
+
+                <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+              </div>
+            </div>
+
+            <div class="col s12 m4">
+              <div class="icon-block">
+                <h2 class="center brown-text"><i class="medium material-icons">sentiment_very_satisfied</i></h2>
+                <h5 class="center">Easy to work with</h5>
+
+                <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.carousel.carousel-slider').carousel({
+          fullWidth: true,
+          duration: 100
+        });
+      });
+    </script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
